Fixing select getting too wide, warnings on a variety of things

--- a/core/admin/css/components/forms.less
+++ b/core/admin/css/components/forms.less
@@ -431,6 +431,7 @@
 		border: 1px solid #CCCCCC;
 		border-radius: 2px;
 		float: left;
+		max-width: 100%;
 		position: relative;
 	}
 
@@ -464,6 +465,7 @@
 		outline: 0;
 		padding: 0 44px 0 10px;
 		position: relative;
+		width: 100%;
 	}
 
 	// Undo the Firefox inner focus ring
